--- a/home-darts-web/src/app/modules/core/components/sidenav-menu/sidenav-menu.component.html
+++ b/home-darts-web/src/app/modules/core/components/sidenav-menu/sidenav-menu.component.html
@@ -1,11 +1,13 @@
 <mat-list role="list">
   <mat-menu></mat-menu>
-  <mat-list-item *ngFor="let menuItem of menuItems" role="listitem">
-    <a mat-menu-item [routerLink]="menuItem.link" (click)="onItemClick()">
-      <mat-icon>{{ menuItem.icon }}</mat-icon>
-      <span>{{ menuItem.name }}</span>
-    </a>
-  </mat-list-item>
+  @for (menuItem of menuItems; track menuItem.name) {
+    <mat-list-item role="listitem">
+      <a mat-menu-item [routerLink]="menuItem.link" (click)="onItemClick()">
+        <mat-icon>{{ menuItem.icon }}</mat-icon>
+        <span>{{ menuItem.name }}</span>
+      </a>
+    </mat-list-item>
+  }
 </mat-list>
 
 <hd-copyright></hd-copyright>
