--- a/home-darts-web/src/app/modules/error-screen/error-screen.component.html
+++ b/home-darts-web/src/app/modules/error-screen/error-screen.component.html
@@ -1,4 +1,4 @@
 <div class="error-screen-container flex flex-align-center flex-column">
   <mat-icon class="error-icon mb-24">error_outline</mat-icon>
-  <h2 class="error-message">{{ message }}</h2>
+  <h2 class="error-message">{{ message() }}</h2>
 </div>
