--- a/home-darts-web/src/app/screens/around-the-clock/components/atc-start-players-list/atc-start-players-list.component.html
+++ b/home-darts-web/src/app/screens/around-the-clock/components/atc-start-players-list/atc-start-players-list.component.html
@@ -1,9 +1,9 @@
 <mat-form-field class="mat-form-no-subscript mb-16 w-100">
   <mat-label>Select player</mat-label>
   <mat-select (valueChange)="onItemChange($event)">
-    <mat-option
-      *ngFor="let player of players | filteredPlayers: 'exclude': value"
-      [value]="player">{{ player.username }}</mat-option>
+    @for (player of players() | filteredPlayers: 'exclude': value; track player.id) {
+      <mat-option [value]="player">{{ player.username }}</mat-option>
+    }
   </mat-select>
 </mat-form-field>
 
@@ -12,10 +12,12 @@
 </div>
 
 <mat-chip-listbox aria-label="Players list">
-  <mat-chip *ngFor="let player of players | filteredPlayers: 'only': value">
-    {{ player.username }}
-    <button matChipRemove [attr.aria-label]="'Remove user ' + player.username" (click)="onCloseClick(player)">
-      <mat-icon>cancel</mat-icon>
-    </button>
-  </mat-chip>
+  @for (player of players() | filteredPlayers: 'only': value; track player.id) {
+    <mat-chip>
+      {{ player.username }}
+      <button matChipRemove [attr.aria-label]="'Remove user ' + player.username" (click)="onCloseClick(player)">
+        <mat-icon>cancel</mat-icon>
+      </button>
+    </mat-chip>
+  }
 </mat-chip-listbox>
