--- a/home-darts-web/src/app/screens/history/components/history-item/history-item.component.html
+++ b/home-darts-web/src/app/screens/history/components/history-item/history-item.component.html
@@ -1,26 +1,31 @@
-<mat-card *ngIf="data" tabindex="0" (focus)="onFocus($event)">
-  <mat-card-header>
-    <mat-card-title>{{ gamemodesNames[data.gamemodeName] }}</mat-card-title>
-    <mat-card-subtitle
-      [matTooltip]="(data.creationDate | date:'dd.MM.YYYY HH:mm') ?? ''"
-      matTooltipPosition="above"
-    >{{ data.creationDate | relativeTime: dateNow }}</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content class="history-item__card-content">
-    <div *ngIf="data.throws" class="history-item__throws-info">
-      <p>Hits: {{ data.hits }}</p>
-      <p>Throws: {{ data.throws }}</p>
-      <p>Hit rate: {{ (data.hits / data.throws * 100) | number: '1.2-2' }}%</p>
-    </div>
-  </mat-card-content>
-  <mat-card-actions align="end">
-    <a
-      *ngIf="!data.isCompleted"
-      mat-button
-      color="primary"
-      [routerLink]="['..', 'around-the-clock', data.id]"
-      [relativeTo]="route"
-      (focus)="onFocus($event)"
-    >Load game</a>
-  </mat-card-actions>
-</mat-card>
+@if (data(); as data) {
+  <mat-card tabindex="0" (focus)="onFocus($event)">
+    <mat-card-header>
+      <mat-card-title>{{ gamemodesNames[data.gamemodeName] }}</mat-card-title>
+      <mat-card-subtitle
+        [matTooltip]="(data.creationDate | date:'dd.MM.YYYY HH:mm') ?? ''"
+        matTooltipPosition="above"
+      >{{ data.creationDate | relativeTime: dateNow }}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content class="history-item__card-content">
+      @if (data.throws) {
+        <div class="history-item__throws-info">
+          <p>Hits: {{ data.hits }}</p>
+          <p>Throws: {{ data.throws }}</p>
+          <p>Hit rate: {{ (data.hits / data.throws * 100) | number: '1.2-2' }}%</p>
+        </div>
+      }
+    </mat-card-content>
+    <mat-card-actions align="end">
+      @if (!data.isCompleted) {
+        <a
+          mat-button
+          color="primary"
+          [routerLink]="['..', 'around-the-clock', data.id]"
+          [relativeTo]="route"
+          (focus)="onFocus($event)"
+        >Load game</a>
+      }
+    </mat-card-actions>
+  </mat-card>
+}
