--- a/home-darts-web/src/app/screens/statistics/components/atc-statistics-card/atc-statistics-card.component.html
+++ b/home-darts-web/src/app/screens/statistics/components/atc-statistics-card/atc-statistics-card.component.html
@@ -8,7 +8,7 @@
         matTooltipPosition="above"
         class="atc-stats-card-param-item__icon"
       >sports_esports</mat-icon>
-      @if (data) {
+      @if (data(); as data) {
         <p class="atc-stats-card-param-item__value">{{ data.gamesCount }}</p>
       } @else {
         <ngx-skeleton-loader
@@ -26,7 +26,7 @@
         [matTooltip]="'Throws count'"
         matTooltipPosition="above"
       />
-      @if (data) {
+      @if (data(); as data) {
         <p class="atc-stats-card-param-item__value">{{ data.throws }}</p>
       } @else {
         <ngx-skeleton-loader
@@ -44,7 +44,7 @@
         [matTooltip]="'Hit rate'"
         matTooltipPosition="above"
       />
-      @if (data) {
+      @if (data(); as data) {
         <p class="atc-stats-card-param-item__value">
           @if (data.throws === 0) {
             -
@@ -66,7 +66,7 @@
         [matTooltip]="'Longest hits streak'"
         matTooltipPosition="above"
       >timeline</mat-icon>
-      @if (data) {
+      @if (data(); as data) {
         <p class="atc-stats-card-param-item__value">{{ data.longestHitsStreak }}</p>
       } @else {
         <ngx-skeleton-loader
