--- a/home-darts-web/src/app/screens/statistics/statistics.component.html
+++ b/home-darts-web/src/app/screens/statistics/statistics.component.html
@@ -6,9 +6,9 @@
       <mat-form-field class="mat-form-no-subscript">
         <mat-label>Select player</mat-label>
         <mat-select [formControl]="playerControl">
-          <mat-option
-            *ngFor="let player of players$ | async"
-            [value]="player">{{ player.username }}</mat-option>
+          @for (player of players(); track player.id) {
+            <mat-option [value]="player">{{ player.username }}</mat-option>
+          }
         </mat-select>
       </mat-form-field>
     </div>
